Buttons work now

--- a/www/framework/index.html
+++ b/www/framework/index.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Submit Data</title>
+    <title>Valkyrie</title>
+    <link rel="stylesheet" type="text/css" href="myStyle.css">
 </head>
 <body>
-    <h1>Input Form</h1>
-    <form action="index.php" method="post">
-        <label for="name">Name:</label><br>
-        <input type="text" id="name" name="name"><br>
-        <label for="email">Email:</label><br>
-        <input type="text" id="email" name="email"><br><br>
-        <input type="submit" value="Submit">
-    </form>
-    <p>Click below to view data from the database:</p>
-    <a href="showingData.php">View Data</a>
+    <h1>Welcome to the Valkyrie Server</h1>
+    <p>This page is under construction.</p>
 </body>
 </html>
 
